--- a/templates/pages/trainee/justify_absence.html.twig
+++ b/templates/pages/trainee/justify_absence.html.twig
@@ -13,9 +13,9 @@
 				<h2 class="col-10">Absences à justifier</h2>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-10 col-sm-12 d-flex flex-column align-items-center">
+				<div class="col-12 col-md-10">
 					{% if message is not empty %}
-						<div class=" text-center alert-info alert col-4 col-sm-6 d-flex justify-content-center">{{message|raw}}</div>
+						<div class="text-center alert-info alert col-4 col-sm-6 mx-auto">{{message|raw}}</div>
 					{% endif %}
 					<div class="container-table">
 						<table class="dataTable_justify">
