--- a/templates/pages/home/register.html.twig
+++ b/templates/pages/home/register.html.twig
@@ -50,14 +50,14 @@
 							{{ form.createInputText('laneType','text','Type de voie', 'space' , POST.laneType) }}
 							{{ form.createInputText('street','text','Nom de rue', 'space', POST.street) }}
 							<div>
-							<ul class="contAutoComplete"></ul>
+								<ul class="contAutoComplete"></ul>
 							</div>
 							{{ form.createInputText('addressComplement','text','Complément d adresse', 'space', POST.addressComplement)}}
 							{{ form.createInputText('postalCode','text', 'Code Postal', 'space', POST.postalCode) }}
 							{{ form.createInputText('city','text','Ville', 'space', POST.city)}}
 
 						</fieldset>
-						
+
 						<fieldset>
 							<legend>
 								Formation Souhaitée
@@ -78,5 +78,6 @@
 					<p></p>
 				</div>
 				<script src="scripts/register-check.js"></script>
+				<script src="/scripts/apiAddress"></script>
 		{% endif %}
 	{% endblock %}
